@@ -26,8 +26,8 @@ FEATURE: UI   | Linux system tray support [Gudy]
 FEATURE: UI   | MyTracker row right-click support for copying torrent URL to clipboard [Parg]
 FEATURE: UI   | Right-click menu sorting of columns (Sorting for OSX) [TuxPaper]
 FEATURE: UI   | Send text in My Torrents to clipboard [TuxPaper]
-FEATURE: UI   | SWT libs auto-updater [Gudy]
 FEATURE: UI   | When torrent data is missing, you can change directory via the context menu [TuxPaper]
+FEATURE: UI   | OSX : About and Preferences items are listed under 'Azureus' menu
 FEATURE: WebUI| Web Plugin now can set upload rate [Parg]
 FEATURE: WebUI| Web Plugin support for uploading torrents [Parg]
 FEATURE: WebUI| Webui + xml/http "access" property support for IP range [Parg]
@@ -53,6 +53,7 @@ CHANGE: UI   | Systray4j removed: system tray support now from SWT built-in code
 CHANGE: UI   | Torrent name shown with IPs in the blocked-IPFilter list [Nolar]
 CHANGE: UI   | The Donation Window is now Closeable using the 'Esc' Key [Gudy]
 CHANGE: UI   | In the Donation Window the OK button should be on top of other Controls [Gudy]
+CHANGE: UI   | Added a "what's new" item in help menu, pointing to changelog for current version [Gudy / Gouss ]
 
 BUGFIX: Core | Files incorrectly shared if contents not a torrent when opening [Parg]
 BUGFIX: Core | First Priority rules based on time now work across sessions [TuxPaper]
